<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_main_header"
        app:title=""

        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tb_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/my_balance_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_balances"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_tb"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_balance_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/my_balance_title_tv"

        tools:listitem="@layout/list_item_user_balance"
        />

    <TextView
        android:id="@+id/currency_ex_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_exchange"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/user_balance_rv"
        />

    <LinearLayout
        android:id="@+id/sell_icon_ll"
        android:layout_width="36dp"
        android:layout_height="36dp"

        android:layout_marginHorizontal="16dp"

        android:layout_marginTop="16dp"
        android:background="@drawable/circle_bg"
        android:backgroundTint="@color/sell_red"
        app:layout_constraintTop_toBottomOf="@id/currency_ex_title_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        >

        <ImageView
            android:src="@drawable/up_arrow_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sell" />

    </LinearLayout>

    <TextView
        android:id="@+id/sell_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:textColor="@color/black"
        android:textStyle="bold"

        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="@id/sell_icon_ll"
        app:layout_constraintBottom_toBottomOf="@id/sell_icon_ll"
        app:layout_constraintLeft_toRightOf="@id/sell_icon_ll"
        />

    <EditText
        android:id="@+id/sell_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@null"
        android:gravity="end"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:hint="@string/sell_amt"

        app:layout_constraintTop_toTopOf="@id/sell_icon_ll"
        app:layout_constraintBottom_toBottomOf="@id/sell_icon_ll"
        app:layout_constraintLeft_toRightOf="@id/sell_title_tv"
        app:layout_constraintRight_toLeftOf="@id/sell_currency_tv"
         />

    <TextView
        android:id="@+id/sell_currency_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="EUR"
        app:drawableEndCompat="@drawable/dropdown_black"
        app:drawableTint="@color/black"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toTopOf="@id/sell_icon_ll"
        app:layout_constraintBottom_toBottomOf="@id/sell_icon_ll"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/line_separator1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/separator_gray"

        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/sell_icon_ll"
        app:layout_constraintLeft_toLeftOf="@id/sell_title_tv"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/recv_icon_ll"
        android:layout_width="36dp"
        android:layout_height="36dp"

        android:layout_marginHorizontal="16dp"

        android:layout_marginTop="16dp"
        android:background="@drawable/circle_bg"
        android:backgroundTint="@color/recv_green"
        app:layout_constraintTop_toBottomOf="@id/sell_icon_ll"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        >

        <ImageView
            android:src="@drawable/down_arrow_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sell" />

    </LinearLayout>

    <TextView
        android:id="@+id/recv_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        android:textColor="@color/black"
        android:textStyle="bold"

        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="@id/recv_icon_ll"
        app:layout_constraintBottom_toBottomOf="@id/recv_icon_ll"
        app:layout_constraintLeft_toRightOf="@id/recv_icon_ll"
        />

    <TextView
        android:id="@+id/recv_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:importantForAutofill="no"
        android:gravity="end"

        tools:text="+ 100"
        android:textStyle="bold"
        android:textColor="@color/recv_green"

        app:layout_constraintTop_toTopOf="@id/recv_icon_ll"
        app:layout_constraintBottom_toBottomOf="@id/recv_icon_ll"
        app:layout_constraintLeft_toRightOf="@id/recv_title_tv"
        app:layout_constraintRight_toLeftOf="@id/recv_currency_tv"
        />

    <TextView
        android:id="@+id/recv_currency_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="USD"
        app:drawableEndCompat="@drawable/dropdown_black"
        app:drawableTint="@color/black"
        android:layout_marginHorizontal="16dp"

        app:layout_constraintTop_toTopOf="@id/recv_icon_ll"
        app:layout_constraintBottom_toBottomOf="@id/recv_icon_ll"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/line_separator2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/separator_gray"

        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/recv_icon_ll"
        app:layout_constraintLeft_toLeftOf="@id/recv_title_tv"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button"
        android:foreground="?android:attr/selectableItemBackground"

        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"

        app:layout_constraintTop_toBottomOf="@id/line_separator2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>