<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="fitStart"
        android:src="@drawable/close_icon"
        app:tint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_tv"
        app:layout_constraintBottom_toBottomOf="@id/title_tv"
        android:contentDescription="@string/close"
        />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_currency"
        android:textColor="@color/black"
        android:textSize="22sp"

        android:layout_marginStart="10dp"

        app:layout_constraintLeft_toRightOf="@id/close_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_search_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/search_icon"
            app:tint="@color/black"
            android:contentDescription="@string/search"
            />


        <EditText
            android:id="@+id/search_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/search"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"

            android:layout_marginStart="5dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:scrollHorizontally="true"
            android:autofillHints=""
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rates_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/search_container"
        tools:listitem="@layout/list_item_rate"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

